--- a/css/media.css
+++ b/css/media.css
@@ -1,37 +1,47 @@
 .only-mobile {
     display: none;
 }
+
 @media screen and (min-width: 800px) and (max-width: 1280px) {
     .main-notebook {
-    position: absolute;
-    top: -90px;
-    width: 710px;
-    right: -40px;
-    margin-top: 50px;
-    }
-       .main-notebook1 {
-    position: absolute;
-    top: -90px;
-    width: 710px;
-    margin-top: 50px;
-    right: -350px;
+        position: absolute;
+        top: -90px;
+        width: 710px;
+        right: -40px;
+        margin-top: 50px;
     }
 
+    .main-notebook1 {
+        position: absolute;
+        top: -90px;
+        width: 710px;
+        margin-top: 50px;
+        right: -350px;
+    }
 
 }
+
 @media screen and (max-width: 830px) {
     body {
         min-width: inherit;
     }
 
-    
-
     .container {
         width: 320px;
     }
+
+    .features > .container {
+        width: 100%;
+    }
+
+    .feature-item {
+        height: 450px;
+    }
+
     .only-mobile {
         display: block;
     }
+
     .mobile-hide {
         display: none;
     }
@@ -41,69 +51,90 @@
         width: 46px;
         height: 46px;
     }
+
     .icon-star {
         background-size: 20px auto;
     }
+
     .icon-exchange {
         background-size: 19px auto;
     }
+
     .icon-migration {
         background-size: 18px auto;
     }
+
     .icon-secure {
         background-size: 15px auto;
     }
+
     .icon-partners {
         background-size: 22px auto;
     }
+
     .icon-comments {
         background-size: 27px auto;
     }
+
     .icon-mail {
         background-size: 19px auto;
     }
-    /* /icons */
 
+    /* /icons */
     /* bg */
+    .feature-item {
+        height: 500px;
+    }
+
     .bg-main {
         width: 1591px;
         right: -110px;
     }
+
     .bg-video {
         top: 70px;
         right: -280px;
         width: 550px;
     }
+
     .bg-features-1 {
-        top: 120px;
-        right: 0;
-        width: 600px;
+        top: 15px;
+        left: 0;
+        height: 131%;
+        width: 94%;
     }
+
     .bg-features-2 {
-        top: 270px;
-        right: -310px;
-        width: 740px;
+        top: 0;
+        right: 0;
+        height: 127%;
+        width: 84%;
     }
+
     .bg-features-3 {
-        top: 800px;
-        right: -120px;
-        width: 600px;
+        top: 0;
+        left: 0;
+        height: 115%;
+        width: 88%;
     }
+
     .bg-footer {
         top: 0;
         left: -260px;
     }
+
     .bg-comments {
         left: 50px;
         top: -170px;
         width: 1348px;
     }
-    /* /bg */
 
+    /* /bg */
     /* header */
     .header-menu {
         display: none;
     }
+
     .header-menu-mobile {
         position: fixed;
         text-align: center;
@@ -115,9 +146,11 @@
         z-index: 111;
         padding-top: 50px;
     }
+
     .header-menu-close {
         display: none;
     }
+
     .header-menu-mobile a {
         display: block;
         font-size: 18px;
@@ -125,9 +158,11 @@
         color: #ffffff;
         text-transform: uppercase;
     }
+
     .header-menu-mobile a:hover {
         text-decoration: underline;
     }
+
     .header-menu-mobile-close {
         width: 40px;
         height: 40px;
@@ -138,15 +173,18 @@
         top: -10px;
         right: 10px;
     }
+
     .header-logo {
         margin-left: 0px;
     }
+
     .header-logo img {
-    display: block;
-    width: 77px;
-    margin-top: -10px;
-    margin-left: 2px;
+        display: block;
+        width: 77px;
+        margin-top: -10px;
+        margin-left: 2px;
     }
+
     .header-button {
         position: absolute;
         top: 15px;
@@ -157,20 +195,20 @@
         cursor: pointer;
         border: none;
     }
-    /* /header */
 
+    /* /header */
     /* main */
     .main {
         padding-bottom: 0;
         padding-top: 40px;
     }
+
     .main-mobile-title {
         line-height: 67px;
         font-size: 27px;
         text-align: center;
         color: #182848;
     }
-
 
     .main-notebook {
         position: relative;
@@ -179,12 +217,14 @@
         display: block;
         width: 100%;
     }
+
     .main-notebook1 {
         top: auto;
         right: auto;
         display: block;
         width: 100%;
     }
+
     .main-title {
         width: 260px;
         margin: 0 auto;
@@ -195,8 +235,8 @@
         color: #182848;
         margin-bottom: 20px;
     }
-    /* /main */
 
+    /* /main */
     /* download */
     .download-title {
         font-size: 18px;
@@ -205,6 +245,7 @@
         padding-top: 35px;
         padding-bottom: 30px;
     }
+
     .download {
         flex-wrap: wrap;
         height: auto;
@@ -212,151 +253,161 @@
     }
 
     .download-text {
-    text-align: center;
-    line-height: 22px;
-    font-size: 16px;
-    color: #121010;
-    padding-bottom: 60px;
+        text-align: center;
+        line-height: 22px;
+        font-size: 16px;
+        color: #121010;
+        padding-bottom: 60px;
 
-}
-   .download-text-app {
-    text-align: center;
-    line-height: 22px;
-    font-size: 16px;
-    color: #121010;
-    padding-bottom: 60px;
+    }
 
-}
+    .download-text-app {
+        text-align: center;
+        line-height: 22px;
+        font-size: 16px;
+        color: #121010;
+        padding-bottom: 60px;
+    }
+
     .download-item {
         width: 50%;
         height: 137px;
     }
+
     .mobile_interface {
-    position: relative;
-    left: auto;
-    top: auto;
-    right: auto;
-    display: block;
-    width: 45%;
-    padding-left: 25px;
-    
+        position: relative;
+        left: auto;
+        top: auto;
+        right: auto;
+        display: block;
+        width: 80%;
     }
+
     .download-item:after {
         content: none;
     }
-    /* /download */
 
+    /* /download */
     /* video */
     .video .container {
         height: 270px;
         padding-top: 50px;
     }
 
-    .video-container{
-    width: 380px;
-    margin-left: -40px;
+    .video-container {
+        width: 380px;
+        margin-left: -40px;
 
     }
+
     .video-text {
-    padding-left: 10px;
-    text-align: center;
+        padding-left: 10px;
+        text-align: center;
     }
 
     /* /video */
-
     /* list */
     .list {
         margin-top: 100px;
         padding-bottom: 0;
     }
+
     .list-title-container .icon {
         float: none;
     }
+
     .list-title {
         line-height: 30px;
         font-size: 14px;
         margin-top: 20px;
     }
+
     .list-items {
         margin-left: 0;
         margin-top: 5px;
     }
+
     .list-item {
         width: 32%;
         padding-top: 25px;
         margin-bottom: 0;
         margin-top: 30px;
     }
+
     .list-items-all:not(.list-items-hide) {
         display: inline;
     }
+
     .list-item img {
         width: 36px;
     }
+
     .list-item-name {
         font-size: 14px;
     }
-    /* /list */
 
+    /* /list */
     /* features */
     .features {
         padding-top: 60px;
     }
+
     .features-subtitle {
         line-height: 27px;
         font-size: 14px;
         margin-bottom: 30px;
     }
-    .features-item {
-        padding-top: 0px;
-        margin-top: 60px;
-        margin-left: 0;
-        width: 250px;
 
+    .features-item {
     }
+
     .features-title {
-    line-height: 67px;
-    font-size: 48px;
-    text-align: center;
-    color: #182848;
-    margin-top: 50px;
+        line-height: 67px;
+        font-size: 48px;
+        text-align: center;
+        color: #182848;
+        margin-top: 50px;
     }
-        .features-title-app {
-    line-height: 67px;
-    font-size: 48px;
-    text-align: center;
-    color: #182848;
-    margin-top: 150px;
+
+    .features-title-app {
+        line-height: 67px;
+        font-size: 48px;
+        text-align: center;
+        color: #182848;
+        margin-top: 150px;
     }
+
     .features-text {
         line-height: 18px;
         font-size: 14px;
         width: 250px;
     }
+
     .features-item:nth-child(2) {
         margin-top: 80px;
         width: 260px;
     }
+
     .features-item:nth-child(3) {
         padding-top: 220px;
     }
 
     .features-item-right {
-    float: right;
-    padding-top: 70px;
+        float: right;
+        padding-top: 70px;
     }
 
     .features-item-left {
         padding-top: 110px !important;
     }
+
     /* /features */
-
     /* partners */
-
     .partners {
-    width: auto;
-    margin-top: 520px;
+        width: auto;
+        margin-top: 520px;
     }
+
     .partners-list,
     .investors {
         margin-top: 45px;
@@ -365,6 +416,7 @@
         border: none;
         padding-left: 0px
     }
+
     .partners_special {
 
         width: 500%;
@@ -372,16 +424,18 @@
         padding-left: 0px;
 
     }
+
     .partners-list a,
     .investors a {
         width: 90%;
-        
+
         padding-top: 20px
         vertical-align: middle;
         text-align: center;
         margin-bottom: 20px;
         padding-left: 0px;
     }
+
     .partners-list img,
     .investors img {
         display: inline-block;
@@ -389,40 +443,48 @@
         max-height: 140px;
         vertical-align: middle;
     }
+
     .partners-list a + a,
     .investors a + a {
         padding-left: 0;
     }
-    /* /partners */
 
+    /* /partners */
     /* comments */
     .comments-title {
         font-size: 16px;
     }
+
     .comments-arrow {
         width: 24px;
         height: 24px;
         top: 20px;
         background-size: 13px;
     }
+
     .comments-arrow-left {
         right: 60px;
     }
+
     .comments-item {
         width: 260px;
         height: 160px;
         padding: 60px 30px 0 30px;
     }
+
     .comments-item + .comments-item {
         margin-left: 28px;
     }
+
     .comments-item img {
         display: inline-block;
         width: 40px;
     }
+
     .comments-image {
         top: 22px;
     }
+
     .comments-text {
         margin-top: 17px;
         line-height: 22px;
@@ -430,43 +492,53 @@
         height: 67px;
         overflow: hidden;
     }
+
     .comments-slider {
         height: 185px;
     }
+
     .comments-item .button {
         width: 160px;
         bottom: 15px;
         font-size: 14px;
         line-height: 30px;
     }
+
     .team .comments-slider {
         height: 420px;
     }
+
     .team .comments-item {
         height: 390px;
     }
+
     .team-author {
         margin-bottom: 10px;
     }
+
     .team-author-name {
         font-size: 14px;
     }
+
     .team-text {
         line-height: 20px;
         font-size: 12px;
     }
+
     .team-social {
         height: 70px;
         padding-top: 22px;
     }
+
     .team-social img {
         width: 25px;
     }
+
     .team-social a + a {
         margin-left: 40px;
     }
-    /* /comments */
 
+    /* /comments */
     /* subscribe */
     .subscribe {
         margin-top: 40px;
@@ -475,42 +547,51 @@
     .subscribe .container {
         padding-left: 0;
     }
+
     .subscribe .icon-mail {
         position: relative;
         margin-bottom: 20px;
     }
+
     .subscribe-top {
         margin-top: 40px;
     }
-    
+
     .subscribe-top .container {
         padding-left: 10px;
         padding-top: 20px;
     }
+
     .subscribe-top .icon-mail {
         position: relative;
         margin-bottom: 20px;
     }
+
     .subscribe-title {
         line-height: 25px;
         font-size: 12px;
     }
+
     .subscribe-title-top {
-    line-height: 25px;
-    font-size: 15px;
-    margin-left: 50px;
+        line-height: 25px;
+        font-size: 15px;
+        margin-left: 50px;
     }
+
     .subscribe-form {
         width: 100%;
         text-align: center;
     }
+
     .subscribe-form-top {
         width: 100%;
         text-align: center;
     }
+
     .mc-field-group input[type="email"] {
         width: 100%;
     }
+
     .mc-field-group button,
     .mc-field-group input[type="submit"] {
         position: relative;
@@ -518,31 +599,34 @@
         right: auto;
         margin-top: 20px;
     }
-     .mc-field-group-top button,
+
+    .mc-field-group-top button,
     .mc-field-group-top input[type="submit"] {
-    position: relative;
-    top: auto;
-    right: auto;
-    margin-top: 20px;
-    width: 228px;
-    margin-left: 1px;
+        position: relative;
+        top: auto;
+        right: auto;
+        margin-top: 20px;
+        width: 228px;
+        margin-left: 1px;
     }
+
     #mc_embed_signup div.mce_inline_error {
         width: 100% !important;
         margin-top: -98px !important;
     }
 
     /* /subscribe */
-
     /* footer */
     .footer {
         overflow: hidden;
         margin-top: 80px;
     }
+
     .footer-email {
         font-size: 16px;
         margin-top: 0;
     }
+
     .footer-social {
         width: 180px;
         position: absolute;
@@ -550,62 +634,74 @@
         right: 0;
         text-align: left;
     }
+
     .footer-social-icon {
         margin-left: 12px;
         margin-bottom: 20px;
     }
+
     .footer-copy {
         margin-top: 260px;
     }
+
     .footer-logo {
         position: absolute;
         top: 100px;
         left: 0;
         width: 80px;
     }
-    /* /footer */
 
+    /* /footer */
     /* page */
     .page {
         margin-top: 20px;
     }
+
     .page-title {
         font-size: 38px;
         margin-bottom: 40px;
     }
+
     .page-text {
         font-size: 16px;
         line-height: 28px;
     }
+
     .page-text-item {
         display: inline-block;
         font-size: 20px;
         margin-bottom: 5px;
     }
+
     .bg-page-1 {
         top: 190px;
         width: 630px;
     }
+
     .bg-page-2 {
         top: 560px;
         width: 630px;
     }
+
     .bg-page-3 {
         top: 1880px;
         width: 680px;
     }
+
     .page + .footer .container:before {
         content: none;
     }
-    /* /page */
 
+    /* /page */
     /* modal */
     .modal {
         background-color: #F7F8F9;
     }
+
     .modal-close {
         z-index: 1111111;
     }
+
     .modal .container,
     .modal .modal-container {
         padding: 0;
@@ -622,32 +718,39 @@
         transform: none;
         padding-bottom: 30px;
     }
+
     .modal-form,
     .modal-sended {
         max-width: 300px;
         margin: 0 auto;
     }
+
     .modal .modal-container {
         border-radius: 0;
         max-width: 300px;
         margin: 0 auto;
     }
+
     .modal .icon {
         display: none;
     }
+
     .modal-form-container {
         padding-top: 35px;
         padding-left: 0;
     }
+
     .modal .subscribe-title {
         max-width: 230px;
         margin: 0 auto;
         font-size: 18px;
         padding-top: 0;
     }
+
     .modal-form-link {
         margin-top: 105px;
     }
+
     .modal .download {
         margin-top: 30px;
         padding-top: 30px;
@@ -661,35 +764,51 @@
         position: relative;
         top: 0;
     }
+
     .modal-soc {
         margin-top: 30px;
     }
+
     .modal-soc-title {
         font-size: 16px;
     }
-    /* /modal */
 
+    /* /modal */
     /* new footer */
     .footer-new {
         padding-bottom: 30px;
         text-align: center;
     }
+
     .footer-new-left {
         min-width: 100%;
         margin-bottom: 20px;
         margin-top: 20px;
     }
+
     .footer-row {
         display: block;
     }
+
     .footer-new-cols {
         display: block;
     }
+
     .footer-new-col {
         padding-top: 20px;
     }
+
     .footer-new-email {
         font-size: 20px;
     }
+
+    .mobile-atomic-wallet {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        width: 100%
+    }
+
     /* /new footer */
 }
