--- a/css/media.css
+++ b/css/media.css
@@ -428,8 +428,7 @@
     .partners-list a,
     .investors a {
         width: 90%;
-
-        padding-top: 20px
+        padding-top: 20px;
         vertical-align: middle;
         text-align: center;
         margin-bottom: 20px;
@@ -808,6 +807,14 @@
         align-items: center;
         justify-content: center;
         width: 100%
+    }
+
+    .token-col {
+        flex-direction: column;
+    }
+
+    .token-item.right{
+        margin-left: 0;
     }
 
     /* /new footer */
